--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "scenograph",
   "version": "0.1.0",
   "description": "scenograph ==========",
-  "main": "scenograph.js",
+  "main": "src/scenograph.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,5 +15,13 @@
   "bugs": {
     "url": "https://github.com/Kl0tl/scenograph/issues"
   },
-  "homepage": "https://github.com/Kl0tl/scenograph"
+  "homepage": "https://github.com/Kl0tl/scenograph",
+  "jspm": {
+    "directories": {
+      "lib": "src"
+    },
+    "dependencies": {
+      "transduce-reduce": "npm:transduce-reduce@^0.1.0"
+    }
+  }
 }
